protocolmodel/mcrl2/testing/errors/error_2002.mcf
% E2002 - State mismatch, user action required
[true* . LOG_ERROR(E2002)] false